FIX | Style bugs on Safari

--- a/components/Input/style.module.scss
+++ b/components/Input/style.module.scss
@@ -17,6 +17,7 @@
     background: transparent;
     border: none;
     border-bottom: 1px solid #FFFFFF;
+    border-radius: 0;
     outline: none;
     padding: 0 24px 16px;
 
