--- a/components/TextArea/style.module.scss
+++ b/components/TextArea/style.module.scss
@@ -19,6 +19,7 @@
     background: transparent;
     border: none;
     border-bottom: 1px solid #FFFFFF;
+    border-radius: 0;
     outline: none;
     padding: 0 24px 16px;
     resize: none;
