--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,7 +16,7 @@ body {
   line-height: 26px;
   color: $gray-color;
   background: $white-color;
-  overflow-x: clip;
+  overflow-x: hidden;
 }
 
 a {
